# Vishengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ScopedTimer.h  main.cpp  pch.h
Camera/: Camera.cpp  Camera.h  CameraFactory.cpp  CameraFactory.h
Components/: BoundingBox.h  BoundingSphere.h  InputMovable.h  InstancedMesh.h  InstancedMeshTag.h  Light.h  Material.h  Mesh.cpp  Mesh.h  MeshNode.h  MeshNodeTag.h  MeshObject.h  Name.h  OctreeLocation.h  Position.h  Relationship.h  RenderableTag.h  RenderingComponents.h  Rotation.h  Scale.h  SelectedTag.h  TextureList.h  Transform.cpp  Transform.h  Window.cpp  Window.h  WorldBoundingBox.h
Components/Camera/: ActiveCameraTag.h  Camera.h  EditorCameraTag.h
Components/CameraComponents/: Camera.cpp  Camera.h  GameCameraTag.h  Orthogonal.h  Perspective.h
Components/EventComponents/: FramebufferSizeEventComponent.h  KeyPressedEventComponent.h  MouseMovedEventComponent.h
Components/Lights/: DirectionalLight.h  PointLight.h  SpotLight.h
Components/Transforms/: RelativeTransform.h  TransformDirtyFlag.h  WorldTransform.h
Controllers/: FramebuffersController.cpp  FramebuffersController.h  MaterialController.h  MeshController.cpp  MeshController.h  ShadersController.cpp  ShadersController.h
Coordinates/: CoordinateUtils.cpp  CoordinateUtils.h  Transform.cpp  Transform.h
Core/: EntityManager.cpp  EntityManager.h  GUIDrawer.cpp  GUIDrawer.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  ModelLoader.cpp  ModelLoader.h  Raycaster.cpp  Raycaster.h  Transform.h  Window.cpp  Window.h
DataStructures/: Box.h  Frustum.cpp  Frustum.h  Octree.cpp  Octree.h  Plane.h
Debug/: DebugRenderPass.cpp  DebugRenderPass.h
Editor/: ConsolePanel.cpp  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  DebugFramebufferPanel.cpp  DebugFramebufferPanel.h  EditorLayer.cpp  EditorLayer.h  EditorStyle.h  HierarchyPanel.cpp  HierarchyPanel.h  IPanel.h  InspectorPanel.cpp  InspectorPanel.h  ScenePanel.cpp  ScenePanel.h  ScenePanelInputState.h  ToolbarPanel.cpp  ToolbarPanel.h
EntityComponent/: Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Mesh.cpp  Mesh.h
Event/: Event.h
Events/: GameEvents.h  ScenePanelEvents.h  WindowEvents.h
Input/: InputManager.h
InputManager/: InputManager.cpp  InputManager.h
Libs/glad/include/glad/: gl.h
Material/: MaterialController.cpp  MaterialController.h  Texture.cpp  Texture.h
Math/: Math.h  MathUtils.cpp  MathUtils.h  Transform.cpp  Transform.h
Mesh/: MeshController.cpp  MeshController.h
Physics/: DistanceConstraint.cpp  DistanceConstraint.h
Platform/: Framebuffer.cpp  Framebuffer.h  Mouse.h  Time.cpp
RenderingComponents/: LineDrawer.cpp  LineDrawer.h
Shaders/: Shader.cpp  Shader.h  ShaderUtils.cpp  ShaderUtils.h  fragment.glsl  vertex.glsl
Shaders/GlslShaders/: ScreenFragmentShader.glsl  debug_fragment.glsl  debug_vertex.glsl  fragment.glsl  vertex.glsl
Systems/: CameraMoveSystem.cpp  CameraMoveSystem.h  CameraProjectionUpdaterSystem.cpp  CameraProjectionUpdaterSystem.h  CameraSystem.cpp  CameraSystem.h  CreateCameraSystem.cpp  CreateCameraSystem.h  CreateMeshSystem.cpp  CreateMeshSystem.h  DebugRenderPass.cpp  DebugRenderPass.h  DrawMeshesSystem.cpp  DrawMeshesSystem.h  EditorCameraMoveSystem.cpp  EditorCameraMoveSystem.h  IRenderPass.h  ImGuiHandlerSystem.cpp  ImGuiHandlerSystem.h  LoadModelSystem.cpp  LoadModelSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PickingSystem.cpp  PickingSystem.h  RenderOutputs.h  RendererSystem.cpp  RendererSystem.h  SceneRenderPass.cpp  SceneRenderPass.h  ScreenBlitPass.cpp  ScreenBlitPass.h  SpatialSystem.cpp  SpatialSystem.h  TransformSystem.cpp  TransformSystem.h  WindowHandlerSystem.cpp  WindowHandlerSystem.h
Texture/: Texture.cpp  Texture.h
Time/: Time.cpp  Time.h
Window/: Window.cpp  Window.h
